syntax = "proto3";

package auth;
// option go_package = "github.com/siriramhazam/budget-authen/proto";
option go_package = "grpc-auth/proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string error = 2;
}